add ElasticSearch connection with extension

--- a/ElasticSearchWithNet.API/appsettings.json
+++ b/ElasticSearchWithNet.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Elastic": {
+    "Url": "http://localhost:9200",
+    "username": "elastic",
+    "password": "changeme"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
